layout formatting changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <nav class="navbar navbar-expand navbar-light bg-light">
-    <a href="#" class="navbar-brand">AgileEA.com</a>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a href="https://agileea.com" class="navbar-brand">AgileEA.com</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="parties" class="nav-link">Parties</a>
