--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
   </nav>
 
-  <div class="container mt-3">
+  <div class="container-xl .translate-middle">
     <router-outlet></router-outlet>
   </div>
 </div>
