--- a/src/app/components/party-list/party-list.component.html
+++ b/src/app/components/party-list/party-list.component.html
@@ -1,67 +1,83 @@
-<div class="list row">
-  <div class="col-md-8">
-    <div class="input-group mb-3">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Search by firstname"
-        [(ngModel)]="firstname"
-      />
-      <div class="input-group-append">
-        <button
-          class="btn btn-outline-secondary"
-          type="button"
-          (click)="searchFirstname()"
-        >
-          Search
-        </button>
+<div class=".container .translate-middle">
+  <div class="list row-xxl">
+    <div class="col-xxl">
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search by firstname"
+          [(ngModel)]="firstname"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary"
+            type="button"
+            (click)="searchFirstname()"
+          >
+            Search
+          </button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container-xxl">
-    <h4>Parties List</h4>
-    <button  class="btn btn-info"><a [routerLink]="[ '..','add' ]">Add</a></button>
-    <div class="row">
-  
-      <div class="col">
-        <ul class="list-group">
-          <div  class="list-group-item"
-              *ngFor="let party of parties; let i = index"
-              [class.active]="i == currentIndex"
-              (click)="setActiveParty(party, i)"> 
-            <div class="card-horizontal">
-              <div>
-                <img class="card-img-top" src="{{party.imageurl}}"
-                width="150" height="150">
-              </div>
-              <div class="card-body">
+    <div class="col-xxl">
+      <pagination-controls
+        previousLabel="Prev"
+        nextLabel="Next"
+        [responsive]="true"
+        (pageChange)="handlePageChange($event)"
+      ></pagination-controls>
+      <div class="col-sm">Items per Page:
+        <select (change)="handlePageSizeChange($event)">
+          <option *ngFor="let size of pageSizes" [ngValue]="size">
+            {{ size }}
+          </option>
+        </select>
+      </div>
+    </div>
 
-                <div class="card-header">
-                  <h5>
-                  {{ party.isorg ? "Organisation:" : "Person:" }}
-                  <a *ngIf="!party.isorg"> {{ party.firstname }} {{ party.surname }}</a>
-                  <a *ngIf="party.isorg"> {{ party.orgname }}</a>
-                  </h5>
+    <div class=".container">
+      <h4>Parties List</h4>
+      <button  class="btn btn-info"[routerLink]="[ '..','add' ]">Add</button>
+      <div class="row">
+        <div class="col-sm-7">
+          <ul class="list-group">
+            <div  class="list-group-item"
+                *ngFor="let party of parties | paginate : {
+                  itemsPerPage: pageSize,
+                  currentPage: page,
+                  totalItems: count
+                }; let i = index"
+                [class.active]="i == currentIndex"
+                (click)="setActiveParty(party, i)"> 
+              <div class="card-horizontal">
+                <div>
+                  <img class="card-img-top" src="{{party.imageurl}}"
+                  width="150" height="150">
                 </div>
-                <div><a>Id:  </a><a>{{ party.id }}</a><p></p></div>
-                <p>Date of Birth: {{ party.dob }}</p>
-              </div>
+                <div class="card-body">
 
-              <div>
-                <a href="#" class="btn btn-danger">Delete</a>
+                  <div class="card-header">
+                    <h5>
+                    {{ party.isorg ? "Organisation:" : "Person:" }}
+                    <a *ngIf="!party.isorg"> {{ party.firstname }} {{ party.surname }}</a>
+                    <a *ngIf="party.isorg"> {{ party.orgname }}</a>
+                    </h5>
+                  </div>
+                  <div><a>Id:  </a><a>{{ party.id }}</a><p></p></div>
+                  <p>Date of Birth: {{ party.dob }}</p>
+                </div>
               </div>
             </div>
-          </div>
-        </ul>
+          </ul>
+        </div>
+        <div class="col-sm-5">
+          <app-party-details
+            [viewMode]="true"
+            [currentParty]="currentParty"
+          ></app-party-details>
+        </div>
       </div>  
-      <div class="col">
-        <app-party-details
-          [viewMode]="true"
-          [currentParty]="currentParty"
-        ></app-party-details>
-      </div>
+    </div>
   </div>
-  </div>
-
 </div>
