--- a/src/app/components/party-add/party-add.component.html
+++ b/src/app/components/party-add/party-add.component.html
@@ -36,6 +36,11 @@
           />
         </div>
 
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="dob" required [(ngModel)]="party.isorg">
+          <label class="form-check-label" for="isorg">Is an Organisation</label>
+        </div>
+
         <div class="form-group">
           <label for="orgname">Organisation name</label>
           <input
