--- a/src/app/components/party-add/party-add.component.html
+++ b/src/app/components/party-add/party-add.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container, border px-2 py-2">
     <div class="submit-form">
       <div *ngIf="!submitted">
 
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
           <div class="col-2  gy-2">
-           <button  class="btn btn-info"><a [routerLink]="[ '..','parties' ]">Cancel</a></button>
+           <button  class="btn btn-info"[routerLink]="[ '..','parties' ]">Cancel</button>
           </div>
           <div class="col-2  gy-2">
             <button (click)="saveParty()" class="btn btn-success">  Save </button>
@@ -93,7 +93,7 @@
   
       <div *ngIf="submitted">
         <h4>Party was submitted successfully!</h4>
-        <button  class="btn btn-info"><a [routerLink]="[ '..','parties' ]">Cancel</a></button>
+        <button  class="btn btn-info"> [routerLink]="[ '..','parties' ]">Cancel</button>
         <button class="btn btn-success" (click)="newParty()">Add Another</button>
         
       </div>
