--- a/src/app/components/party-list/party-list.component.html
+++ b/src/app/components/party-list/party-list.component.html
@@ -70,8 +70,8 @@
                 (click)="setActiveParty(party, i)"> 
               <div class="card-horizontal">
                 <div>
-                  <img class="card-img-top" src="{{party.imageurl}}"
-                  width="150" height="150">
+                  <img class="card-image-left" src="{{party.imageurl}}"
+                  style="width: 150px">
                 </div>
                 <div class="card-body">
 
